Change comment to something relevant

--- a/_posts/0000-01-02-srofe.md
+++ b/_posts/0000-01-02-srofe.md
@@ -2,5 +2,6 @@
 layout: slide
 title: "Welcome to our second slide!"
 --
-Your text
+There are some very important things we need to discuss!
+
 Use the left arrow to go back!
